[gd_scene load_steps=4 format=3 uid="uid://dxoedp6s47hnx"]

[ext_resource type="Texture2D" uid="uid://cxb4ohdenxfxm" path="res://Texture/customer.png" id="1_bvhpc"]
[ext_resource type="Script" uid="uid://cdm76rcm77m48" path="res://scripts/patient.gd" id="1_wtcjq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f6pma"]
radius = 6.0
height = 20.0

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 3
position = Vector2(4, -6)
script = ExtResource("1_wtcjq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4, -3)
shape = SubResource("CapsuleShape2D_f6pma")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bvhpc")

[node name="PatienceTimer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="PatienceBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -23.0
offset_right = 124.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.3, 0.3)
value = 100.0

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="PatienceTimer" to="." method="_on_patience_timer_timeout"]
